REGRESSION: (r272458): [BigSur Debug] ASSERTION FAILED: m_haveAddedMediaUsageManagerSession in WebCore::MediaElementSession::updateMediaUsageIfChanged() https://bugs.webkit.org/show_bug.cgi?id=221634 <rdar://problem/74161017>

Reviewed by Ryosuke Niwa.

No new tests, this fixes an assertion in an existing test.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::MediaElementSession):
(WebCore::MediaElementSession::addMediaUsageManagerSessionIfNecessary):
(WebCore::MediaElementSession::inActiveDocumentChanged):
(WebCore::MediaElementSession::updateMediaUsageIfChanged):
(WebCore::MediaElementSession::addedMediaUsageManagerSessionIfNecessary): Deleted.
* html/MediaElementSession.h:


Canonical link: https://commits.webkit.org/233892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272633 268f45cc-cd09-0410-ab3c-d52691b4dbfc